--- a/dmit2015-firebase-faces-app/src/main/resources/META-INF/microprofile-config.properties
+++ b/dmit2015-firebase-faces-app/src/main/resources/META-INF/microprofile-config.properties
@@ -1,3 +1,3 @@
 firebase.rtdb.Student.base.url=https://dmit2015-1242-a02-swu-default-rtdb.firebaseio.com
-firebase.web.api.key=set by environment variable or hardcoded here
-firebase.webapikey=set by environment variable or hardcoded here
+firebase.web.api.key=[YOUR_WEB_API_KEY]
+firebase.webapikey=[YOUR_WEB_API_KEY]
