--- a/dmit2015-jpa-faces-app/pom.xml
+++ b/dmit2015-jpa-faces-app/pom.xml
@@ -278,6 +278,16 @@
                             <location>wildfly@maven(org.jboss.universe:community-universe)#35.0.0.Final</location>
                         </feature-pack>
                     </feature-packs>
+
+                    <layers>
+                        <layer>cloud-server</layer> <!-- includes ee-security -->
+                        <layer>jpa</layer>
+                        <layer>jsf</layer>
+                        <layer>microprofile-config</layer>
+                        <layer>h2-datasource</layer>
+                        <layer>undertow-https</layer>
+                    </layers>
+
                     <!-- deploys the app on root web context -->
                     <name>ROOT.war</name>
                     <!-- Enable debugging -->
