--- a/dmit2015-jpa-faces-app/src/main/webapp/WEB-INF/web.xml
+++ b/dmit2015-jpa-faces-app/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,16 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
 
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>sslResources</web-resource-name>
+            <url-pattern>/*</url-pattern>
+        </web-resource-collection>
+        <user-data-constraint>
+            <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
+
     <!-- Define a list of default files to server when a directory is requested. -->
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
