--- a/dmit2015-jpa-faces-app/src/main/webapp/WEB-INF/web.xml
+++ b/dmit2015-jpa-faces-app/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,25 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
 
+    <!-- Define role names supported by this application -->
+    <security-role>
+        <role-name>Sales</role-name>
+    </security-role>
+    <security-role>
+        <role-name>DMIT2015.1242.A02</role-name>
+    </security-role>
+    <!-- Restrict access to /student/crud.xhtml to the Sales or DMIT2015.1242.A02 roles. -->
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>StudentResources</web-resource-name>
+            <url-pattern>/student/crud.xhtml</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>Sales</role-name>
+            <role-name>DMIT2015.1242.A02</role-name>
+        </auth-constraint>
+    </security-constraint>
+
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>sslResources</web-resource-name>
