Add custom 403 error page.

--- a/dmit2015-jpa-faces-app/src/main/webapp/WEB-INF/web.xml
+++ b/dmit2015-jpa-faces-app/src/main/webapp/WEB-INF/web.xml
@@ -50,4 +50,8 @@
         <param-value>true</param-value>
     </context-param>
 
+    <error-page>
+        <error-code>403</error-code>
+        <location>/errorpages/403.xhtml</location>
+    </error-page>
 </web-app>
