--- a/dmit2015-jpa-faces-app/pom.xml
+++ b/dmit2015-jpa-faces-app/pom.xml
@@ -289,7 +289,7 @@
                     </layers>
 
                     <scripts>
-                        <script>./wildfly-scripts/enable-oneway-https.cli</script>
+<!--                        <script>./wildfly-scripts/enable-oneway-https.cli</script>-->
                         <script>./wildfly-scripts/configure-elytron.cli</script>
                     </scripts>
 
