Completed secure REST API app and secure REST Client app.

--- a/dmit2015-restapi/pom.xml
+++ b/dmit2015-restapi/pom.xml
@@ -12,8 +12,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.target>21</maven.compiler.target>
-        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
         <junit.version>5.12.0</junit.version>
     </properties>
 
@@ -221,6 +221,8 @@
                         <layer>microprofile-openapi</layer>
                     </layers>
 
+                    <bootableJar>true</bootableJar>
+
                     <!-- deploys the app on root web context -->
                     <name>ROOT.war</name>
 
@@ -229,6 +231,9 @@
                         <server-arg>-Djboss.socket.binding.port-offset=10</server-arg>
                     </server-args>
                     <port>10000</port>
+
+                    <bootable-jar>true</bootable-jar>
+
 
                     <!-- Enable debugging -->
                     <!-- https://www.jetbrains.com/help/idea/attaching-to-local-process.html#attach-to-local -->
