--- a/dmit2015-secure-restclient/pom.xml
+++ b/dmit2015-secure-restclient/pom.xml
@@ -27,6 +27,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>9.0.0.CR1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.36</version>
@@ -209,6 +215,7 @@
                         <layer>jsf</layer>
                         <layer>microprofile-config</layer>
                         <layer>microprofile-rest-client</layer>
+                        <layer>microprofile-jwt</layer>
                     </layers>
 
                     <bootableJar>true</bootableJar>
