--- a/dmit2015-secure-restapi/pom.xml
+++ b/dmit2015-secure-restapi/pom.xml
@@ -12,12 +12,18 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.target>17</maven.compiler.target>
-        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
         <junit.version>5.12.0</junit.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>10.0.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.eclipse.microprofile</groupId>
